# tasknet

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  Dockerfile  Dockerfile.migrator  Makefile  Makefile.toml  README.md  automerge.json  config-template.json  config.yaml  config.yaml.template  crate-hashes.json  docker-compose.yaml  flake.nix  flyway.conf  index.html  rustfmt.toml  service-worker.js  shell.nix  skaffold.yaml  tasknet-44fbce2088d3db1.js  tasknet-44fbce2088d3db1_bg.wasm  tasknet-8a9d2f4a3c990d3.js  tasknet-8a9d2f4a3c990d3_bg.wasm  tasknet-web-35f926776f1ccc6f.js  tasknet-web-35f926776f1ccc6f_bg.wasm  tasknet-web-42da3d154626c6dc.js  tasknet-web-42da3d154626c6dc_bg.wasm  tasknet-web-51086d0bfc65729b.js  tasknet-web-51086d0bfc65729b_bg.wasm  tasknet-web-55a50dca5a1c3e36.js  tasknet-web-55a50dca5a1c3e36_bg.wasm  tasknet-web-6936aa205196e016.js  tasknet-web-6c4146726430f28c.js  tasknet-web-6c4146726430f28c_bg.wasm  tasknet-web-6daf1260d75ca5d4.js  tasknet-web-6daf1260d75ca5d4_bg.wasm  tasknet-web-7fd51154e84e1b30.js  (+15 more)
.github/workflows/: cd.yaml  ci.yaml
certs/: ca-csr.json  server.json
deploy/chart/: Chart.yaml  test.yaml  values.yaml
deploy/chart/templates/: deployment.yaml  postgrescluster.yaml  service.yaml
docs/: index.html  service-worker.js  tasknet.webmanifest
docs/pkg/: README.md  package.d.ts  package.js  package.json  package_bg.wasm  package_bg.wasm.d.ts
email-password/: kratos.yaml  oidc.google.jsonnet
infrastructure/: Chart.yaml
infrastructure/charts/: pgo-0.2.3.tgz
kratos-api/: Cargo.toml
kratos-api/src/: lib.rs
kratos-api/src/models/: ui_node.rs  ui_node_attributes.rs
nix/: default.nix  tasknet-server-clippy.nix  tasknet-server-docker.nix  tasknet-server-test.nix  tasknet-server.nix  tasknet-web-clippy.nix  tasknet-web.nix  tasknet.nix
pkg/: package.js  package_bg.wasm
server/: Cargo.toml
server/src/: auth.rs  config.rs  google.rs  main.rs  server.rs
server/src/auth/: google.rs  public.rs
shared/: Cargo.toml
shared/src/: cookies.rs  lib.rs
src/: components.rs  document.rs  filters.rs  lib.rs  styles.rs  task.rs  urgency.rs
src/pages/: home.rs  view_task.rs
sync/: Cargo.toml
sync/src/: lib.rs  providers.rs
tasknet-server/: Cargo.toml
tasknet-server/db/: V1__Create_changes_table.sql  V2__Create_documents_table.sql  V3__Create_sync_states_table.sql
tasknet-server/src/: auth.rs  backend.rs  db.rs  main.rs  options.rs  server.rs
tasknet-sync/: Cargo.toml
tasknet-sync/src/: lib.rs
tasknet-web/: Cargo.toml  Makefile.toml
tasknet-web/local/tasknet/pkg/: package.js
tasknet-web/src/: components.rs  document.rs  filters.rs  lib.rs  settings.rs  task.rs  urgency.rs
tasknet-web/src/pages/: account.rs  home.rs  login.rs  mod.rs  registration.rs  settings.rs  view_task.rs
web/: Cargo.toml  index.html  service-worker.js
web/src/: auth.rs  components.rs  document.rs  filters.rs  lib.rs  main.rs  task.rs  urgency.rs
web/src/pages/: auth.rs  home.rs  mod.rs  settings.rs  view_task.rs
