[package]
name = "tasknet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = {path = "../sync"}

axum = { version = "0.6.1", features = ["ws", "headers"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "signal"] }
uuid = "1.2.2"
automerge = "0.2.0"
automerge-persistent-fs = "0.2.0"
automerge-persistent = "0.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
async-session = "3.0.0"
openid = "0.11.0"
serde_json = "1.0.103"
