[package]
name = "tasknet-server"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
futures-util = "0.3.12"
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.0"
automerge = { git = "https://github.com/jeffa5/automerge-rs", branch = "update-uuid" }
automerge-protocol = { git = "https://github.com/jeffa5/automerge-rs", branch = "update-uuid" }
