[package]
name = "tasknet-server"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
futures-util = "0.3.12"
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.0"
automergeable = { git = "https://github.com/jeffa5/automergeable", branch = "main" }
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-protocol = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-backend = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
tasknet-sync = { path = "../tasknet-sync" }
tracing = "0.1.23"
