[package]
name = "tasknet-server"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
futures-util = "0.3.12"
serde = "1.0.118"
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.0", features = ["tls"] }
automergeable = { git = "https://github.com/jeffa5/automergeable", branch = "main" }
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-protocol = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-backend = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
tasknet-sync = { path = "../tasknet-sync" }
tracing = "0.1.26"
automerge-persistent = { git = "https://github.com/jeffa5/automerge-persistent", branch = "main" }
tracing-subscriber = "0.2.19"
clap = "3.0.0-beta.2"
tokio-postgres = "0.7.2"
rand = "0.8.4"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
