[package]
name = "tasknet-sync"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
automergeable = { git = "https://github.com/jeffa5/automergeable", branch = "main", default-features = false }
automerge-protocol = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-backend = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
tokio = { version = "1.2.0", features = ["macros", "time", "sync", "rt-multi-thread"] }
serde = "1.0.118"
serde_json = "1.0.62"
tracing = "0.1.23"
