[package]
name = "tasknet-web"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
description = "A task management suite"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
pretty_assertions = "1.4.0"
regex = "1.8.4"

[dependencies]
serde = "1.0.168"
serde_json = "1.0.99"
seed = "0.9.2"
uuid = {version = "1.3.4", features = ["serde", "v4"] }
chrono = {version = "0.4.19", features = ["wasmbind","serde"]}
apply = "0.3.0"
automerge = "0.2.0"
autosurgeon = "0.2.2"
base64 = "0.21.2"

[dependencies.web-sys]
version = "0.3.64"
features = [ "Navigator", "Window", "ServiceWorkerContainer" ]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']