[package]
name = "tasknet-web"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
description = "A task management suite"
edition = "2018"

[dependencies]
tasknet-shared = {path = "../shared"}

serde = "1.0.168"
serde_json = "1.0.99"
seed = { version = "0.10.0", features = ["routing"] }
uuid = {version = "1.3.4", features = ["serde", "v4"] }
chrono = {version = "0.4.19", features = ["wasmbind","serde"]}
apply = "0.3.0"
automerge = "0.5.2"
autosurgeon = "0.7.1"
base64 = "0.21.2"
gloo-console = "0.2.3"
# gloo-net = "0.3.0"
gloo-storage = "0.2.2"
wasm-sockets = "1.0.0"
cookie = { version = "0.17.0", features = ["percent-encode"] }
gloo-net = "0.3.0"

[dependencies.web-sys]
version = "=0.3.61"
features = [ "Navigator", "Window", "Document", "ServiceWorkerContainer" ]

[dev-dependencies]
wasm-bindgen-test = "=0.3.34"
pretty_assertions = "1.4.0"
regex = "1.8.4"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
